force-app/main/default/objects/KimbleOne__OperationalSetting__c/KimbleOne__OperationalSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for controlling operational behaviour, e.g. when revenue is recognised.</description>
    <label>Operational (Setting)</label>
</CustomObject>