force-app/main/default/objects/KimbleOne__OperationalSetting__c/fields/KimbleOne__EnableCompanyPaidExpenses__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EnableCompanyPaidExpenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Company Paid Expenses</label>
    <type>Checkbox</type>
</CustomField>