force-app/main/default/objects/KimbleOne__OperationalSetting__c/fields/KimbleOne__EnableExpensesBeforeAssignmentStartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EnableExpensesBeforeAssignmentStartDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Expenses Before Assignment Start</label>
    <type>Checkbox</type>
</CustomField>