force-app/main/default/objects/KimbleOne__OperationalSetting__c/fields/KimbleOne__RecogniseExpensesOnIncurredDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RecogniseExpensesOnIncurredDate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether Expenses should be recognised on Incurred Date</description>
    <inlineHelpText>Indicates whether Expenses should be recognised on the Incurred Date. Unchecking will result in Expenses being recognised on the Approved Date.</inlineHelpText>
    <label>Recognise Expenses On Incurred Date</label>
    <type>Checkbox</type>
</CustomField>